style/index.css
body {
    margin: 0;
    font-family: Arial, sans-serif;
}

.navbar {
    background-color: #ffffff;
    padding: 10px 20px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    border: 1px solid black;
}

.logo img {
    height: 40px; /* Ajusta el tamaño según tus necesidades */
}

.nav-links {
    list-style-type: none;
    margin: 0;
    padding: 0;
    display: flex;
}

.nav-links li {
    margin-right: 20px;
}

.nav-links li:last-child {
    margin-right: 0;
}

.nav-links a {
    color: #18A0FB;
    text-decoration: none;
    font-size: 16px;
}

.register-btn a {
    background-color: #18A0FB; /* Cambia el color según tus preferencias */
    color: #fff;
    padding: 8px 16px;
    border-radius: 4px;
    text-decoration: none;
    font-size: 16px;
    width: 1vw;
}

